tests/valid/binary_operators/div.rs
/*
return: 2
*/

main(): i32 {
    return 4 / 2;
}