tests/invalid/unary_operators/nested_missing_const.rs
/*
compilationExitCode: 2
*/

main(): i32 {
    return !~;
}